--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 GCP_PROJECT=YOUR_GCP_PROJECT
 GOOGLE_APPLICATION_CREDENTIALS=/path/to/gcp-terraform-credentials.json
 TF_GCS_BUCKET=YOUR_PREFIX-tfstate
+MLFLOW_GCS_BUCKET=YOUR_PREFIX-mlflow-k8s
 MLFLOW_DOMAIN=YOUR_MLFLOW_DOMAIN
 MLFLOW_ENDPOINT=https://${MLFLOW_DOMAIN}/user1/#
 SERVICE_ACCOUNT_EMAIL=mlflow-k8s@${GCP_PROJECT}.iam.gserviceaccount.com
